--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block main_body %}
-
-{% for proj in projects %}
-    {{proj}}
-{% endfor %}
-
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>$Title$</title>
+</head>
+<body>
+$END$
+</body>
+</html>
