--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Test</title>
 </head>
 <body>
-$END$
+<h1>{{sample_text}}</h1>
+<h2>{{trans}}</h2>
+
+{% for proj in projects %}
+    {{proj}}
+{% endfor %}
 </body>
 </html>
