--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
-<body id="page-top">
-
-    <!-- Page Wrapper -->
-    <div id="wrapper">
-
+{% extends 'base.html' %}
+{% load static %}
+{% block page_body %}
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
