working with templates

--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -29,7 +29,7 @@
                                     {% for project in projects %}
                                         <tr>
                                             <td>{{ project.name }}</td>
-                                            <td>{{ project.type }}</td>
+                                            <td>{{ project.DisplayType }}</td>
                                             <td>{{ project.statue }}</td>
                                             <td>{{ project.location }}</td>
                                             <td>{{ project.area }}</td>
