--- a/templates/toolpar.html
+++ b/templates/toolpar.html
@@ -61,7 +61,7 @@
         <div class="topbar-divider d-none d-sm-block"></div>
         <!-- Nav Item - User Information -->
         <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="{% url 'accounts:client_signup' %}" id="userDropdown" role="button"
+            <a class="nav-link dropdown-toggle" href="{% url 'accounts:register-client' %}" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Register as Client</span>
             </a>
@@ -70,7 +70,7 @@
         <div class="topbar-divider d-none d-sm-block"></div>
         <!-- Nav Item - User Information -->
         <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="{% url 'accounts:developer_signup' %}" id="userDropdown" role="button"
+            <a class="nav-link dropdown-toggle" href="{% url 'accounts:register-developer' %}" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Register as Developer</span>
             </a>
