--- a/templates/developer-register.html
+++ b/templates/developer-register.html
@@ -1,5 +1,6 @@
 {% extends 'user_base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block page_body %}
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
@@ -8,9 +9,16 @@
                     <div class="col-lg-12">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Create a Developer Account!</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" method="post" novalidate>
+                                {% csrf_token %}
+                                {% for field in form %}
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    {{field.label}}
+                                    {{field}}
+                                </div>
+                                {% endfor %}
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" id="exampleFirstName"
