--- a/templates/client-register.html
+++ b/templates/client-register.html
@@ -14,34 +14,14 @@
                             <form class="user" method="post" novalidate>
                                 {% csrf_token %}
                                 {% for field in form %}
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    {{field|as_crispy_field}}
-                                </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-6 mb-3 mb-sm-0">
+                                        {{ field.label }}
+                                        {{ field }}
+                                    </div>
+                                    </div>
                                 {% endfor %}
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Email Address">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Repeat Password">
-                                    </div>
-                                </div>
+
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </a>
