--- a/templates/client-register.html
+++ b/templates/client-register.html
@@ -22,9 +22,9 @@
                                     </div>
                                 {% endfor %}
 
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Register Account
-                                </a>
+                                </button>
                                 <!--
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
