displaying Developer Project List and Client subscribtion project list

--- a/templates/clients_project_list.html
+++ b/templates/clients_project_list.html
@@ -9,7 +9,7 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Projects</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Projects subscripe with {{ user }}</h1>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
