--- a/templates/developer_project_list.html
+++ b/templates/developer_project_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block page_body %}
+
+
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
@@ -9,7 +11,7 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Projects</h1>
+                    <h1 class="h3 mb-2 text-gray-800">{{ user.username }} Projects:</h1>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
