make many changes

--- a/templates/accounts/client-register.html
+++ b/templates/accounts/client-register.html
@@ -1,4 +1,4 @@
-{% extends 'user_base.html' %}
+{% extends 'accounts/user_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block page_body %}
@@ -9,33 +9,20 @@
                     <div class="col-lg-12">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create a Developer Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Create a Client Account!</h1>
                             </div>
-                            <form class="user" method="post" novalidate>
+                            <form class="user" method="post" novalidate enctype="multipart/form-data">
                                 {% csrf_token %}
-                                {% for field in form %}
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    {{field.label}}
-                                    {{field}}
-                                </div>
-                                {% endfor %}
+                                    {{ form }}
+{#                                {% crispy form %}#}
 
                                 <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </button>
-                                <!--
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Register with Google
-                                </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                    <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                                </a>
-                                -->
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="{% url 'accounts:forget_password' %}">Forgot Password?</a>
                             </div>
                             <div class="text-center">
                                 <a class="small" href="{% url 'accounts:login' %}">Already have an account? Login!</a>
