--- a/templates/accounts/forgot-password.html
+++ b/templates/accounts/forgot-password.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'original/main_app/base.html' %}
 {% load static %}
 <body class="bg-gradient-primary">
 
@@ -33,7 +33,7 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
+                                        <a class="small" href="../original/register.html">Create an Account!</a>
                                     </div>
                                     <div class="text-center">
                                         <a class="small" href="login.html">Already have an account? Login!</a>
