--- a/templates/accounts/user_base.html
+++ b/templates/accounts/user_base.html
@@ -20,13 +20,14 @@
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 </head>
-<body id="page-top">
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
-{% block page_body %}
+<body class="bg-gradient-primary">
+    <div class="container">
+        {% include 'global/messages.html' %}
+        {% block page_body %}
 
-{% endblock page_body %}
+        {% endblock page_body %}
+
 
     <!-- Bootstrap core JavaScript-->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
