--- a/templates/main_app/base.html
+++ b/templates/main_app/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load user_account_type %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,21 +21,29 @@
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 </head>
+<body id="page-top">
+    <h1>
+{#        {% if user_type == "Developer" %}#}
+{#            Soso#}
+{#        {% else %}#}
+{#            DODO#}
+{#        {% endif %}#}
+{#        {% user_type %}#}
+{#        {% user_type %}#}
+    </h1>
+    <!-- Page Wrapper -->
+    <div id="wrapper">
+    {% include 'global/messages.html' %}
+{% block page_body %}
 
-<body class="bg-gradient-primary">
-    <div class="container">
-
-        {% block page_body %}
-
-        {% endblock page_body %}
-
+{% endblock page_body %}
 
     <!-- Bootstrap core JavaScript-->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
