--- a/templates/accounts/client-register.html
+++ b/templates/accounts/client-register.html
@@ -13,7 +13,7 @@
                             </div>
                             <form class="user" method="post" novalidate enctype="multipart/form-data">
                                 {% csrf_token %}
-                                    {{ form }}
+                                    {{ form | crispy }}
 {#                                {% crispy form %}#}
 
                                 <button type="submit" class="btn btn-primary btn-user btn-block">
