--- a/templates/accounts/developer-register.html
+++ b/templates/accounts/developer-register.html
@@ -3,6 +3,12 @@
 {% load crispy_forms_tags %}
 {% block page_body %}
         <div class="card o-hidden border-0 shadow-lg my-5">
+        {% if form.errors %}
+            {% for error in form.non_field_errors %}
+               <h1>{{ error }}</h1>
+            {% endfor %}
+
+            {% endif %}
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
@@ -14,7 +20,8 @@
                             <form class="user" method="post" novalidate enctype="multipart/form-data">
                                 {% csrf_token %}
 {#                                {% crispy form %}#}
-                                {{ form }}
+{#                                {{ form }}#}
+                                {{ form|crispy }}
 {#                                <input type="submit" name="Register", value="Register" id="register">#}
                                 <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Register Account
