--- a/templates/main_app/project_list.html
+++ b/templates/main_app/project_list.html
@@ -36,8 +36,8 @@
                                     {% for project in projects %}
                                         <tr>
                                             <td>{{ project.name }}</td>
-                                            <td>{{ project.DisplayType }}</td>
-                                            <td>{{ project.statue }}</td>
+                                            <td>{{ project.get_type_display }}</td>
+                                            <td>{{ project.get_statue_display }}</td>
                                             <td>{{ project.location }}</td>
                                             <td>{{ project.area }}</td>
                                             <td>{{ project.developer }}</td>
