add project and template and some other views

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -21,8 +21,7 @@
                                     </div>
                                     <form class="user" method="post">
                                         {% csrf_token %}
-{#                                        {% crispy form %}#}
-{{ form }}
+                                        {{ form|crispy }}
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </button>
