add search form

--- a/templates/accounts/forgot-password.html
+++ b/templates/accounts/forgot-password.html
@@ -1,4 +1,4 @@
-{% extends 'original/main_app/base.html' %}
+{% extends 'main_app/base.html' %}
 {% load static %}
 <body class="bg-gradient-primary">
 
