--- a/templates/main_app/developer_project_list.html
+++ b/templates/main_app/developer_project_list.html
@@ -32,8 +32,8 @@
                                         <tr>
 {#                                            <td>{{ project.name }}</td>#}
                                             <td><a href="{% url 'main_app:project-details' pk=project.id %}">{{ project.name }}</a></td>
-                                            <td>{{ project.DisplayType }}</td>
-                                            <td>{{ project.statue }}</td>
+                                            <td>{{ project.get_type_display }}</td>
+                                            <td>{{ project.get_statue_display }}</td>
                                             <td>{{ project.location }}</td>
                                             <td>{{ project.area }}</td>
                                             <td>{{ project.developer }}</td>
