applying search filter successfully

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -31,10 +31,10 @@
                                         <a class="small" href="{% url 'accounts:forget_password' %}">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="{% url 'accounts:register-client' %}">Create a Developer Account!</a>
+                                        <a class="small" href="{% url 'accounts:register-client' %}">Create a Client Account!</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="{% url 'accounts:register-developer' %}">Create a Client Account!</a>
+                                        <a class="small" href="{% url 'accounts:register-developer' %}">Create a Developer Account!</a>
                                     </div>
                                 </div>
                             </div>
