make some changes

--- a/templates/main_app/projects_list.html
+++ b/templates/main_app/projects_list.html
@@ -37,7 +37,9 @@
         </div>
     </div>
 </div>
+    {% if user.is_developer %}
 <a href="{% url 'main_app:add-project' %}" class="btn btn-primary btn-user btn-block">
     Add New Preoject
 </a>
+    {% endif %}
 {% endblock main_body %}
