--- a/templates/accounts/user_form.html
+++ b/templates/accounts/user_form.html
@@ -6,13 +6,15 @@
     <div class="col-lg-12">
         <div class="p-5">
             <div class="text-center">
-                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                <h1 class="h4 text-gray-900 mb-4">{{ listing_title }}</h1>
             </div>
-            <form class="user" method="post">
+            <form class="user" method="post" novalidate enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form|crispy }}
+                    {{ form | crispy }}
+{#                                {% crispy form %}#}
+
                 <button type="submit" class="btn btn-primary btn-user btn-block">
-                    Login
+                    {{ bottom_title }}
                 </button>
             </form>
             <hr>
@@ -20,10 +22,7 @@
                 <a class="small" href="{% url 'accounts:forget_password' %}">Forgot Password?</a>
             </div>
             <div class="text-center">
-                <a class="small" href="{% url 'accounts:register-client' %}">Create a Client Account!</a>
-            </div>
-            <div class="text-center">
-                <a class="small" href="{% url 'accounts:register-developer' %}">Create a Developer Account!</a>
+                <a class="small" href="{% url 'accounts:login' %}">Already have an account? Login!</a>
             </div>
         </div>
     </div>
