--- a/templates/main_app/add_project.html
+++ b/templates/main_app/add_project.html
@@ -1,103 +1,19 @@
-{% extends 'main_app/base.html' %}
+{% extends 'global/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block page_body %}
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-            <!-- Main Content -->
-            <div id="content">
-                {% include 'main_app/../global/toolbar.html' %}
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Projects</h1>
-                    <!-- DataTales Example -->
-                    <form class="user" method="post" novalidate enctype="multipart/form-data">
-                                {% csrf_token %}
-{#                                {% crispy form %}#}
-{#                                {{ form }}#}
-                                {{ form|crispy }}
-{#                                <input type="submit" name="Register", value="Register" id="register">#}
-                                <button type="submit" class="btn btn-primary btn-user btn-block">
-                                    Add Project
-                                </button>
-                            </form>
-
-{#                <div class="card shadow mb-4">#}
-{#                        <div class="card-body">#}
-{#                            <div class="table-responsive">#}
-{#                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">#}
-{#                                    <thead>#}
-{#                                        <tr>#}
-{#                                            <th>username</th>#}
-{#                                            <th>First Name</th>#}
-{#                                            <th>last Name</th>#}
-{#                                        </tr>#}
-{#                                    </thead>#}
-{#                                    <tbody>#}
-{#                                    {% for user in users %}#}
-{#                                        <tr>#}
-{#                                            <td>{{ user.username }}</td>#}
-{#                                            <td>{{ user.first_name }}</td>#}
-{#                                            <td>{{ user.last_name }}</td>#}
-{#                                        </tr>#}
-{#                                    {% endfor %}#}
-{#                                    </tbody>#}
-{#                                </table>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <!-- /.container-fluid -->#}
-
-            </div>
-            <!-- End of Main Content -->
-
-            <!-- Footer -->
-{#            <footer class="sticky-footer bg-white">#}
-{#                <div class="container my-auto">#}
-{#                    <div class="copyright text-center my-auto">#}
-{#                        <span>Copyright &copy; Your Website 2020</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </footer>#}
-            <!-- End of Footer -->
-
-        </div>
-        <!-- End of Content Wrapper -->
+{% block main_body %}
+<div id="content-wrapper" class="d-flex flex-column">
+    <div id="content">
+        <div class="container-fluid">
+            <h1 class="h3 mb-2 text-gray-800">Projects</h1>
+            <form class="user" method="post" novalidate enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                            Add Project
+                        </button>
+                    </form>
 
     </div>
-    <!-- End of Page Wrapper -->
-
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../accounts/login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock page_body %}
+</div>
+{% endblock main_body %}
